--- a/client/one/app/app-root.component.less
+++ b/client/one/app/app-root.component.less
@@ -3,5 +3,6 @@
 .zem-app-root {
     display: block;
     min-height: 100vh;
+    min-height: var(--window-height, 100vh);
     overflow-y: hidden;
 }
