--- a/client/one/app/styles/utilities.less
+++ b/client/one/app/styles/utilities.less
@@ -62,7 +62,7 @@ hr {
         position: fixed;
 
         .dropdown.open {
-            .dropdown-menu {
+            .dropdown-menu:not(.zem-header__dropdown-menu--header-menu) {
                 overflow: visible; // Dropdown iPhone Fix
             }
         }
