--- a/client/one/app/views/dashboard/dashboard.view.less
+++ b/client/one/app/views/dashboard/dashboard.view.less
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    min-height: var(--window-height, 100vh);
 }
 
 .zem-dashboard-view__main-container {
